Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18394

[QNX] qtcreator should use qnxenv with lupdate

XMLWordPrintable

    • 3350e9a0fd967dc3a378dc6832b691df1c2d4637

      If lupdate is run with QNX kit, it gives the following error:

      "C:\Qt\Qt5.7.0\5.7\mingw53_32\bin\lrelease.exe" finished
      Starting external tool "C:\Qt\Qt5.7.0\5.7\qnx6_x86\bin\lupdate.exe"
      C:/Git/master-gui/gui/gui.pro
      WARNING: Project ERROR: QNX_TARGET environment variable not set
      WARNING: Could not read qmake configuration file
      C:/Qt/Qt5.7.0/5.7/qnx6_x86/mkspecs/qnx-x86-qcc/qmake.conf."

      The workaround is to set the QNX_TARGET and path for lupdate in QtCreator, but then switching between kits and running lupdate may not work.

       

        For Gerrit Dashboard: QTCREATORBUG-18394
        # Subject Branch Project Status CR V

            con Eike Ziller
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes