src/plugins/coreplugin/externaltool.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include "id.h"
+
 #include <utils/fileutils.h>
 #include <utils/environment.h>
 
@@ -67,7 +69,9 @@ public:
     QString arguments() const;
     QString input() const;
     QString workingDirectory() const;
-    QList<Utils::EnvironmentItem> environment() const;
+    Id baseEnvironmentProviderId() const;
+    Utils::Environment baseEnvironment() const;
+    QList<Utils::EnvironmentItem> environmentUserChanges() const;
 
     void setFileName(const QString &fileName);
     void setPreset(QSharedPointer<ExternalTool> preset);
@@ -96,7 +100,8 @@ public:
     void setArguments(const QString &arguments);
     void setInput(const QString &input);
     void setWorkingDirectory(const QString &workingDirectory);
-    void setEnvironment(const QList<Utils::EnvironmentItem> &items);
+    void setBaseEnvironmentProviderId(Id id);
+    void setEnvironmentUserChanges(const QList<Utils::EnvironmentItem> &items);
 
 private:
     QString m_id;
@@ -108,6 +113,7 @@ private:
     QString m_arguments;
     QString m_input;
     QString m_workingDirectory;
+    Id m_baseEnvironmentProviderId;
     QList<Utils::EnvironmentItem> m_environment;
     OutputHandling m_outputHandling = ShowInPane;
     OutputHandling m_errorHandling = ShowInPane;
